update css styles to prevent scrollbar visibility

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,22 @@
 body {
   margin: 0;
   padding: 0;
+  width: calc(100vw - 16px);
+  height: calc(100vh - 16px);
+  font-family: sans-serif;
   background-color: black;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+#canvas {
+  width: 100%;
+  height: 100%;
 }
